# minigames-flet

./: .gitignore  README.md  main.py  pyproject.toml
src/flet360.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
