[project]
name = "flet360"
version = "0.1.0"
description = "Flet360 - mini apps e mini games em Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flet>=0.25.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
